--- a/style.css
+++ b/style.css
@@ -1,40 +1,95 @@
 body {
+    background: #FCFDF9;
+    height: 100%;
     width: 100%;
-    margin: 0 auto;
-    background-color: black;
-}
-
-header {
-    background-image: url(images/header.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 450px;
-    text-align: center;
-}
-
-.section1 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-}
-
-.info {
+    overflow: hidden;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .index {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background-image: url("images/portfolio-background.png");
+  }
+  
+  nav {
     display: flex;
-    justify-content: right;
-}
-
-.intro {
-    color: white;
-    text-align: right;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 40px;
-    letter-spacing: 3px;
-}
-
-span {
+    width: 84%;
+    margin: auto;
+    padding: 20px 0;
+    align-items: center;
+    justify-content: space-between;
+    font-family: sans-serif;
+  }
+  
+  nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+  }
+  
+  nav ul li a:hover {
     color: orange;
-}
-
-.portrait {
-    width: 500px;
-    opacity: 75%;
-}
+  }
+  
+  .detail {
+    margin-left: 8%;
+    margin-top: 20%;
+    font-family: 'Oswald', sans-serif;
+  }
+  
+  .detail h1 {
+    font-size: 60px;
+    color: #212121;
+    margin-bottom: 10px;
+  }
+  
+  span {
+    color: orange;
+  }
+  
+  .detail p {
+    color: #555;
+    line-height: 22px;
+  }
+  
+  .images {
+    width: 45%;
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+  }
+  
+  .images img {
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    transition: top 1s, left 1s;
+  }
+  
+  .images:hover .shape {
+    top: 20px;
+  }
+  
+  .images:hover .portrait {
+    left: 45%;
+  }
+  
+  .index .JCLogo {
+    height: 200px;
+    width: 200px;
+  }
