--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
     padding: 20px 0;
     align-items: center;
     justify-content: space-between;
-    font-family: sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
+    letter-spacing: 1px;
   }
   
   nav ul li {
@@ -62,6 +63,8 @@ body {
   .detail p {
     color: #555;
     line-height: 22px;
+    font-family: 'Source Sans Pro', sans-serif;
+    letter-spacing: 2px;
   }
   
   .images {
