--- a/aboutme/about-style.css
+++ b/aboutme/about-style.css
@@ -7,7 +7,7 @@
 .about {
     width: 100%;
     height: 100vh;
-    background-image: url("../images/portfolio-background.png");
+    background-image: url("../images/about-background.jpeg");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +47,7 @@
 }
 
 .text h5 {
-    color: black;
+    color: white;
     font-size: 25px;
     margin-bottom: 25px;
     letter-spacing: 2px;
@@ -55,7 +55,7 @@
 }
 
 .text p {
-    color: black;
+    color: white;
     font-size: 14px;
     line-height: 28px;
     letter-spacing: 1px;
