--- a/aboutme/about-style.css
+++ b/aboutme/about-style.css
@@ -1,13 +1,49 @@
+body {
+    background-image: url("../images/about-background.jpeg");
+}
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
+nav {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    padding: 20px 0;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 25px;
+    letter-spacing: 1px;
+}
+  
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+  
+nav ul li a {
+    text-decoration: none;
+    color: orange;
+    font-weight: bold;
+}
+  
+nav ul li a:hover {
+    color: white;
+}
+
+.JCLogo {
+    height: 200px;
+    width: 200px;
+}
+
 .about {
     width: 100%;
     height: 100vh;
-    background-image: url("../images/about-background.jpeg");
     display: flex;
     justify-content: center;
     align-items: center;
