--- a/contactme/contact-styles.css
+++ b/contactme/contact-styles.css
@@ -1,13 +1,45 @@
 body {
     background-image: url("../images/about-background.jpeg");
-    background-repeat: no-repeat;
-    background-size: 100%;
+}
+
+nav {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    padding: 20px 0;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 25px;
+    letter-spacing: 1px;
+}
+  
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+  
+nav ul li a {
+    text-decoration: none;
+    color: orange;
+    font-weight: bold;
+}
+  
+nav ul li a:hover {
+    color: white;
+}
+
+.JCLogo {
+    height: 200px;
+    width: 200px;
 }
 
 form {
     margin-left:auto;
     margin-right:auto;
     margin-top: 5vh;
+    margin-bottom: 10vh;
     max-width: 500px;
     background: #F7F7F7;
     opacity: 0.94;
