fixing a few bugs

--- a/aboutme/about-style.css
+++ b/aboutme/about-style.css
@@ -59,7 +59,7 @@ nav ul li a:hover {
 }
 
 .content {
-    width: 1280px;
+    width: 93vw;
     max-width: 95%;
     margin: 0 auto;
     display: flex;
