--- a/myprojects/projects-style.css
+++ b/myprojects/projects-style.css
@@ -73,6 +73,7 @@ h1 {
 
 p {
     font-size: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
     letter-spacing: 1px;
     margin: 30px 0px;
 }
