--- a/contactme/contact-styles.css
+++ b/contactme/contact-styles.css
@@ -1,5 +1,7 @@
 body {
     background-image: url("../images/about-background.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 nav {
