--- a/myprojects/projects-style.css
+++ b/myprojects/projects-style.css
@@ -1,5 +1,7 @@
 body {
     background-image: url("../images/about-background.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 nav {
