--- a/myprojects/projects-style.css
+++ b/myprojects/projects-style.css
@@ -50,8 +50,8 @@ nav ul li a:hover {
     border: 3px white solid;
     border-radius: 5px;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     margin: 50px;
 }
 
