--- a/style.css
+++ b/style.css
@@ -1,98 +1,118 @@
 body {
-    background: #FCFDF9;
+  background: #FCFDF9;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.index {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("images/portfoliobackground.png");
+}
+
+nav {
+  display: flex;
+  width: 84%;
+  margin: auto;
+  padding: 20px 0;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing: 1px;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  color: orange;
+}
+
+.detail {
+  margin-left: 8%;
+  margin-top: 20%;
+  font-family: 'Oswald', sans-serif;
+}
+
+.detail h1 {
+  font-size: 60px;
+  color: #212121;
+  margin-bottom: 10px;
+}
+
+span {
+  color: #F5A42B;
+}
+
+.detail p {
+  color: #555;
+  line-height: 22px;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing: 2px;
+}
+
+.images {
+  width: 45%;
+  height: 80%;
+  position: absolute;
+  bottom: 0;
+  right: 100px;
+}
+
+.images img {
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  transition: top 1s, left 1s;
+}
+
+.images:hover .shape {
+  top: 20px;
+}
+
+.images:hover .portrait {
+  left: 45%;
+}
+
+.index .JCLogo {
+  height: 200px;
+  width: 200px;
+}
+
+
+
+
+@media (max-width: 576px) {
+  body {
     height: 100%;
     width: 100%;
     overflow: hidden;
   }
-  
-  * {
-    margin: 0;
-    padding: 0;
+
+  h1, p {
+    display: none;
   }
-  
-  .index {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background-image: url("images/portfoliobackground.png");
-  }
-  
-  nav {
-    display: flex;
-    width: 84%;
-    margin: auto;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: space-between;
-    font-family: 'Source Sans Pro', sans-serif;
-    letter-spacing: 1px;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-  }
-  
-  nav ul li a:hover {
-    color: orange;
-  }
-  
-  .detail {
-    margin-left: 8%;
-    margin-top: 20%;
-    font-family: 'Oswald', sans-serif;
-  }
-  
-  .detail h1 {
-    font-size: 60px;
-    color: #212121;
-    margin-bottom: 10px;
-  }
-  
-  span {
-    color: #F5A42B;
-  }
-  
-  .detail p {
-    color: #555;
-    line-height: 22px;
-    font-family: 'Source Sans Pro', sans-serif;
-    letter-spacing: 2px;
-  }
-  
+
   .images {
-    width: 45%;
-    height: 80%;
-    position: absolute;
-    bottom: 0;
-    right: 100px;
+    width: 65%;
+    height: 65%;
   }
-  
-  .images img {
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
-    transition: top 1s, left 1s;
-  }
-  
-  .images:hover .shape {
-    top: 20px;
-  }
-  
-  .images:hover .portrait {
-    left: 45%;
-  }
-  
-  .index .JCLogo {
-    height: 200px;
-    width: 200px;
-  }
+}
