--- a/myprojects/projects-style.css
+++ b/myprojects/projects-style.css
@@ -56,7 +56,7 @@ nav ul li a:hover {
 }
 
 .project-image {
-    width: 400px;
+    width: 30vw;
     height: auto;
     margin: auto;
     border-radius: 3px;
@@ -102,4 +102,38 @@ button:hover {
 .buttons {
     display: flex;
     justify-content: space-evenly;
+}
+
+
+
+
+@media (max-width: 576px) {
+    body {
+        height: 100%;
+        width: 100%;
+    }
+
+    .wrapper {
+        overflow: hidden;
+    }
+
+    .JCLogo {
+        width: 30vw;
+        height: auto;
+    }
+
+    .center {
+        width: 100%;
+        padding: 0px;
+    }
+
+    .project-image {
+        width: 50vw;
+        margin: 0px;
+    }
+
+    .content {
+        width: 60vw;
+        height: auto;
+    }
 }
