--- a/contactme/contact-styles.css
+++ b/contactme/contact-styles.css
@@ -4,6 +4,11 @@ body {
     background-attachment: fixed;
 }
 
+.wrapper {
+    min-height: 100vh;
+    width: 100%; max-width: 1400px; margin: 0 auto;
+}
+
 nav {
     display: flex;
     width: 80%;
