--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   padding: 0;
 }
 
+.wrapper {
+  min-height: 100vh;
+  width: 100%; max-width: 1400px; margin: 0 auto;
+}
+
 .index {
   position: relative;
   width: 100vw;
