--- a/myprojects/projects-style.css
+++ b/myprojects/projects-style.css
@@ -133,8 +133,8 @@ button:hover {
     }
 
     .project-image {
-        width: 50vw;
-        margin: 0px;
+        width: 60vw;
+        margin-top: 20px;
     }
 
     .content {
